--- a/trees.css
+++ b/trees.css
@@ -73,7 +73,9 @@ margin-right: 5px;
 	font-family:sans-serif;
 	font-size: larger;
 }
-.active_map {
-    background-color: #1111DD !important;
-}
 
+.active_map {
+    background-color: white !important;
+    color:black !important;
+    border:1px solid gray !important;
+}
