--- a/trees.css
+++ b/trees.css
@@ -1,44 +1,42 @@
 #map {
-    position: relative;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-  }
+  position: relative;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
 
 .m-color-white {
-    color:#E4E4E4 !important;
-  }
+  color: #e4e4e4 !important;
+}
 
 .map-overlay {
-position: absolute;
-bottom: 0;
-right: 0;
-background: rgba(255, 255, 255, 0.8);
-margin-right: 20px;
-font-family: Arial, sans-serif;
-overflow: auto;
-border-radius: 3px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.8);
+  margin-right: 20px;
+  font-family: Arial, sans-serif;
+  overflow: auto;
+  border-radius: 3px;
 }
 
 #legend {
-padding: 10px;
-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-line-height: 18px;
-height: 80px;
-left: 20px;
-margin-bottom: 40px;
-width: 160px;
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  line-height: 18px;
+  height: 80px;
+  left: 20px;
+  margin-bottom: 40px;
+  width: 160px;
 }
 
 .legend-key {
-display: inline-block;
-border-radius: 20%;
-width: 10px;
-height: 10px;
-margin-right: 5px;
+  display: inline-block;
+  border-radius: 20%;
+  width: 10px;
+  height: 10px;
+  margin-right: 5px;
 }
-
-
 
 .column {
   float: left;
@@ -47,37 +45,35 @@ margin-right: 5px;
 
 /* Clear floats after the columns */
 .row:after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
 
-
 .ui.fixed.sticky + p {
-	margin-top: 39px;
-  }
-
+  margin-top: 39px;
+}
 
 #nav {
-	border-bottom: 10px !important;
-	border-color: #76AD3A !important;
-	border: #76AD3A !important;
+  border-bottom: 10px !important;
+  border-color: #76ad3a !important;
+  border: #76ad3a !important;
 }
 
 #logo {
-	width: 60px;
-	height: 60px;
+  width: 60px;
+  height: 60px;
 }
 
 #title {
-	font-family:sans-serif;
-	font-size: larger;
+  font-family: sans-serif;
+  font-size: larger;
 }
 
 .active_map {
-    background-color: white !important;
-    color:black !important;
-    border:1px solid gray !important;
+  background-color: white !important;
+  color: black !important;
+  border: 1px solid gray !important;
 }
 .title_tree {
   font-size: 40px;
@@ -86,11 +82,14 @@ margin-right: 5px;
 }
 
 .green_color {
-  color: #7FB562 !important;
+  color: #7fb562 !important;
 }
 
-.sub_title{
+.sub_title {
   color: whitesmoke;
   font-size: large;
 }
 
+.ui.link.list .item:hover {
+  background-color: rgb(102, 101, 101);
+}
